Updated the examples to use the externally accessible web interface.

--- a/web/examples/sos-core-test.html
+++ b/web/examples/sos-core-test.html
@@ -10,8 +10,8 @@
       padding-right: 10px;
     }
     </style>
-    <script type="text/javascript" src="http://bslpsdweb.nerc-bas.ac.uk/js/sos/OpenLayers/OpenLayers.js"></script>
-    <script type="text/javascript" src="http://bslpsdweb.nerc-bas.ac.uk/js/sos/SOS/SOS.js"></script>
+    <script type="text/javascript" src="http://psdweb.nerc-bas.ac.uk/js/sos/OpenLayers/OpenLayers.js"></script>
+    <script type="text/javascript" src="http://psdweb.nerc-bas.ac.uk/js/sos/SOS/SOS.js"></script>
     <script type="text/javascript">
       /**
        * Initializes the page
