--- a/web/examples/sos-plot-test.html
+++ b/web/examples/sos-plot-test.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>SOS Plot Test</title>
-    <link rel="stylesheet" href="http://psdweb.nerc-bas.ac.uk/js/sos/jquery/theme/default/jquery-ui.min.css" type="text/css"/>
-    <link rel="stylesheet" href="http://psdweb.nerc-bas.ac.uk/js/sos/SOS/SOS.Styles.css" type="text/css"/>
-    <script type="text/javascript" src="http://psdweb.nerc-bas.ac.uk/js/sos/proj4js/lib/proj4js-combined.js"></script>
-    <script type="text/javascript" src="http://psdweb.nerc-bas.ac.uk/js/sos/OpenLayers/OpenLayers.js"></script>
-    <script type="text/javascript" src="http://psdweb.nerc-bas.ac.uk/js/sos/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="http://psdweb.nerc-bas.ac.uk/js/sos/jquery/jquery-ui.min.js"></script>
-    <!--[if lte IE 8]><script type="text/javascript" src="http://psdweb.nerc-bas.ac.uk/js/sos/flot/excanvas.min.js"></script><![endif]-->
-    <script type="text/javascript" src="http://psdweb.nerc-bas.ac.uk/js/sos/flot/jquery.flot.min.js"></script>
-    <script type="text/javascript" src="http://psdweb.nerc-bas.ac.uk/js/sos/flot/jquery.flot.selection.min.js"></script>
-    <script type="text/javascript" src="http://psdweb.nerc-bas.ac.uk/js/sos/flot/jquery.flot.axislabels.min.js"></script>
-    <script type="text/javascript" src="http://psdweb.nerc-bas.ac.uk/js/sos/SOS/SOS.js"></script>
-    <script type="text/javascript" src="http://psdweb.nerc-bas.ac.uk/js/sos/SOS/SOS.Ui.js"></script>
+    <link rel="stylesheet" href="/js/sos/jquery/theme/default/jquery-ui.min.css" type="text/css"/>
+    <link rel="stylesheet" href="/js/sos/SOS/SOS.Styles.css" type="text/css"/>
+    <script type="text/javascript" src="/js/sos/proj4js/lib/proj4js-combined.js"></script>
+    <script type="text/javascript" src="/js/sos/OpenLayers/OpenLayers.js"></script>
+    <script type="text/javascript" src="/js/sos/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/sos/jquery/jquery-ui.min.js"></script>
+    <!--[if lte IE 8]><script type="text/javascript" src="/js/sos/flot/excanvas.min.js"></script><![endif]-->
+    <script type="text/javascript" src="/js/sos/flot/jquery.flot.min.js"></script>
+    <script type="text/javascript" src="/js/sos/flot/jquery.flot.selection.min.js"></script>
+    <script type="text/javascript" src="/js/sos/flot/jquery.flot.axislabels.min.js"></script>
+    <script type="text/javascript" src="/js/sos/SOS/SOS.js"></script>
+    <script type="text/javascript" src="/js/sos/SOS/SOS.Ui.js"></script>
 
     <script type="text/javascript">
       /**
