Added function to download plotted/tabulated data.  The data are written in a new document as preformatted text, whereupon the source of the document can be saved, and then the DOCTYPE and html tags removed.

--- a/web/examples/sos-core-test.html
+++ b/web/examples/sos-core-test.html
@@ -72,7 +72,7 @@
           tbody += '<tr>';
           tbody += '<td>' + ob.observedPropertyTitle + '</td>';
           tbody += '<td>' + ob.time + '</td>';
-          tbody += '<td>' + ob.result.value + ' ' + ob.UomTitle + '</td>';
+          tbody += '<td>' + ob.result.value + ' ' + ob.uomTitle + '</td>';
           tbody += '</tr>';
         }
 
