Added outstanding UI component: SOS.Info.  These controls allow for informational panels to be distributed around the application, which hook into the SOS (via defined event handlers) to show context-sensitive metadata.  They can also be used for displaying static content, such as the context-sensitive help panels etc.  Alongside this, some major SOS request/response handling that is missing from a stock OpenLayers install has been added to the core SOS module (such as describe sensor handling).

--- a/web/examples/sos-app-test.html
+++ b/web/examples/sos-app-test.html
@@ -38,6 +38,12 @@
         left: 0px;
         top: 10px;
       }
+      .sos-menu-controls-container {
+        height: 180px;
+        position: absolute;
+        left: 8px;
+        top: 198px;
+      }
     </style>
   </head>
   <body onload="init()">
