Minor mods. to example pages, plus addition of new example for the SOS.Info component.

--- a/web/examples/sos-app-test.html
+++ b/web/examples/sos-app-test.html
@@ -38,6 +38,14 @@
         left: 0px;
         top: 10px;
       }
+      .sos-app {
+        width: 81%;
+        height: 600px;
+        padding: 5px;
+        position: absolute;
+        left: 210px;
+        top: 5px;
+      }
       .sos-menu-controls-container {
         height: 180px;
         position: absolute;
