--- a/web/examples/index.html
+++ b/web/examples/index.html
@@ -20,6 +20,7 @@
           <li><a href="sos-table-test.html">sos-table-test.html</a></li>
           <li><a href="sos-map-test.html">sos-map-test.html</a></li>
           <li><a href="sos-menu-test.html">sos-menu-test.html</a></li>
+          <li><a href="sos-info-test.html">sos-info-test.html</a></li>
           <li><a href="sos-plot-browser.php?url=http%3A%2F%2Fsosmet.nerc-bas.ac.uk%3A8080%2Fsosmet%2Fsos&offeringId=HalleyMet&observedProperty=air_temperature&title=SOS+Plot+Browser+Test">sos-plot-browser.php</a></li>
         </ul>
         <li>SOS applications</li>
