--- a/web/examples/sos-menu-test.html
+++ b/web/examples/sos-menu-test.html
@@ -36,6 +36,12 @@
         position: relative;
         top: 10px;
       }
+      .sos-menu-controls-container {
+        height: 180px;
+        position: absolute;
+        left: 8px;
+        top: 164px;
+      }
     </style>
   </head>
   <body onload="init()">
