start demo page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,105 @@
-sos-js GitHub page
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <title>sos-js demo</title>
+
+    <style type="text/css">
+      table, th, td {
+        padding-right: 10px;
+      }
+	  
+	  .info {
+		color: #d3d3d3;
+	  }
+    </style>
+
+    <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/OpenLayers/OpenLayers.js"></script>
+    <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/SOS/SOS.js"></script>
+
+    <script type="text/javascript">
+      /**
+       * Initializes the page
+       */
+      function init() {
+        alert("Open the console log (Ctrl+Shift+k in Firefox) to see outputs from this test harness");
+
+        var sos = new SOS({url: 'http://sosmet.nerc-bas.ac.uk:8080/sosmet/sos'});
+
+        console.log("***** post instantiation tests *****");
+
+        console.log("sos = ");
+        console.log(sos);
+        console.log(sos.config);
+ 
+        sos.getCapabilities(runCapsTests);
+      }
+
+      /**
+       * Callback to run tests on the SOS object
+       */
+      function runCapsTests(e) {
+        console.log("***** post getCapabilities tests *****");
+
+        console.log("this (sos) = ");
+        console.log(this);
+
+        var off = this.getOffering("HalleyMet");
+
+        if(off) {
+          console.log("off = ");
+          console.log(off);
+
+          // off.filterObservedProperties(["wind_speed"]);
+          off.getLatestObservations(runLatestObsTests);
+        }
+      }
+
+      /**
+       * Callback to run tests on the SOS latest observations
+       */
+      function runLatestObsTests(e) {
+        console.log("***** post getLatestObservations tests *****");
+
+        console.log("this (off) = ");
+        console.log(this);
+        console.log("this.getCountOfObservations() = " + this.getCountOfObservations());
+        console.log("this.getObservationRecord(0) = ");
+        console.log(this.getObservationRecord(0));
+
+        var tbody = "";
+
+        for(var i = 0, len = this.getCountOfObservations(); i < len; i++) {
+          var ob = this.getObservationRecord(i);
+          tbody += '<tr>';
+          tbody += '<td>' + ob.observedPropertyTitle + '</td>';
+          tbody += '<td>' + ob.time + '</td>';
+          tbody += '<td>' + ob.result.value + ' ' + ob.uomTitle + '</td>';
+          tbody += '</tr>';
+        }
+
+        var html = '<table><tbody>';
+        html += '<tr>';
+        html += '<th><b>Variable</b></th>';
+        html += '<th><b>Time</b></th>';
+        html += '<th><b>Latest Value</b></th>';
+        html += '</tr>';
+        html += tbody;
+        html += '</tbody></table>';
+
+        document.getElementById("output").innerHTML = html;
+      }
+    </script>
+  </head>
+  <body onload="init()">
+    <h1 id="title">sos-js demo</h1>
+    <p>Open the console log (Ctrl+Shift+k in Firefox) to see outputs from this test harness</p>
+    <p>This tests the core SOS objects from the SOS.js module, via a number of user-defined callbacks.  It requests the latest data from the <em>HalleyMet</em> offering, for all observed properties, and dumps lots of output to the console log.  It is these core SOS objects that underpin the user interface components, such as SOS.Plot etc.</p>
+    <div id="output"></div>
+	
+	<h3 id="about">About</h3>
+	<p>Link to Blogpost</p>
+  </body>
+</html>
