--- a/web/examples/sos-table-test.html
+++ b/web/examples/sos-table-test.html
@@ -27,6 +27,7 @@
           url: 'http://sosmet.nerc-bas.ac.uk:8080/sosmet/sos',
           offeringId: "HalleyMet",
           observedProperty: "air_temperature",
+          foiId: "foi_34579",
           relativeTime: "yesterday"
         };
         var table = new SOS.Table(options);
@@ -37,7 +38,7 @@
   </head>
   <body onload="init()">
     <h3 id="title">SOS Table Test</h3>
-    <p>This tests the SOS.Table component from the SOS.Ui.js module.  It requests the <em>air_temperature</em> observed property from the <em>HalleyMet</em> offering, with a relative time of <em>yesterday</em>.  It also includes an optional overview plot below the table, which allows the table to be subsetted, via a dragged selection across the overview plot.  Similarly, two rows can be shift+clicked on the table to subselect, which is also reflected in the overview plot.  Clicking anywhere on the overview plot resets the subselection.  Furthermore, two rows can be clicked on the table, which will then produce summary statistics for the selected interval, displayed in a pop-up dialog.</p>
+    <p>This tests the SOS.Table component from the SOS.Ui.js module.  It requests the <em>air_temperature</em> observed property, for FOI <em>foi_34579</em> (Halley) from the <em>HalleyMet</em> offering, with a relative time of <em>yesterday</em>.  It also includes an optional overview plot below the table, which allows the table to be subsetted, via a dragged selection across the overview plot.  Similarly, two rows can be shift+clicked on the table to subselect, which is also reflected in the overview plot.  Clicking anywhere on the overview plot resets the subselection.  Furthermore, two rows can be clicked on the table, which will then produce summary statistics for the selected interval, displayed in a pop-up dialog.</p>
     <div id="sosTable" class="sos-table"></div>
   </body>
 </html>
