--- a/index.html
+++ b/index.html
@@ -4,104 +4,68 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>sos-js demo</title>
+    <title>sos-js Demo</title>
 
-    <style type="text/css">
-      table, th, td {
-        padding-right: 10px;
-      }
-	  
-	  .info {
-		color: #d3d3d3;
-	  }
-    </style>
-
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/OpenLayers.js"></script>
-    <script type="text/javascript" src="SOS.js"></script>
-
+    <link rel="stylesheet" href="http://basmet.nerc-bas.ac.uk/js/sos/jquery/theme/default/jquery-ui.min.css" type="text/css"/>
+    <link rel="stylesheet" href="http://basmet.nerc-bas.ac.uk/js/sos/SOS/SOS.Styles.css" type="text/css"/>
+    <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/proj4js/lib/proj4js-combined.js"></script>
+    <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/OpenLayers/OpenLayers.js"></script>
+    <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/jquery/jquery-ui.min.js"></script>
+    <!--[if lte IE 8]><script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/flot/excanvas.min.js"></script><![endif]-->
+    <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/flot/jquery.flot.min.js"></script>
+    <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/flot/jquery.flot.selection.min.js"></script>
+    <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/flot/jquery.flot.axislabels.min.js"></script>
+    <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/flot/jquery.flot.navigate.min.js"></script>
+    <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/SOS/SOS.js"></script>
+    <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/SOS/SOS.Ui.js"></script>
+	
     <script type="text/javascript">
+	  SOS.Proxy.disable();
+	  
       /**
        * Initializes the page
        */
       function init() {
-        alert("Open the console log (Ctrl+Shift+k in Firefox) to see outputs from this test harness");
-
-        var sos = new SOS({url: 'http://geoviqua.dev.52north.org/SOS-Q/sos/kvp'});
-
-        console.log("***** post instantiation tests *****");
-
-        console.log("sos = " + sos);
-        console.log(sos.config);
-		
-        sos.getCapabilities(runCapsTests);
-      }
-
-      /**
-       * Callback to run tests on the SOS object
-       */
-      function runCapsTests(e) {
-        console.log("***** post getCapabilities tests *****");
-
-        console.log("this (sos) = ");
-        console.log(this);
-
-        var off = this.getOffering("ttp___geoviqua.dev.52north.org_procedures_WXT520");
-		
-		// HACK the correct endpoint
-		off.url = "http://geoviqua.dev.52north.org/SOS-Q/sos/pox";
-		
-        if(off) {
-          console.log("offering = ");
-          console.log(off);
-
-          // off.filterObservedProperties(["wind_speed"]);
-          off.getLatestObservations(runLatestObsTests);
-        }
-      }
-
-      /**
-       * Callback to run tests on the SOS latest observations
-       */
-      function runLatestObsTests(e) {
-        console.log("***** post getLatestObservations tests *****");
-
-        console.log("this (off) = ");
-        console.log(this);
-        console.log("this.getCountOfObservations() = " + this.getCountOfObservations());
-        console.log("this.getObservationRecord(0) = ");
-        console.log(this.getObservationRecord(0));
-
-        var tbody = "";
-
-        for(var i = 0, len = this.getCountOfObservations(); i < len; i++) {
-          var ob = this.getObservationRecord(i);
-          tbody += '<tr>';
-          tbody += '<td>' + ob.observedPropertyTitle + '</td>';
-          tbody += '<td>' + ob.time + '</td>';
-          tbody += '<td>' + ob.result.value + ' ' + ob.uomTitle + '</td>';
-          tbody += '</tr>';
-        }
-
-        var html = '<table><tbody>';
-        html += '<tr>';
-        html += '<th><b>Variable</b></th>';
-        html += '<th><b>Time</b></th>';
-        html += '<th><b>Latest Value</b></th>';
-        html += '</tr>';
-        html += tbody;
-        html += '</tbody></table>';
-
-        document.getElementById("output").innerHTML = html;
+        var options = {
+          url: 'http://geoviqua.dev.52north.org/SOS-Q/sos/kvp'
+		  //url: 'http://sensorweb.demo.52north.org/52n-sos-webapp/sos/service'
+        };
+        var app = new SOS.App(options);
+        app.display();
       }
     </script>
+    <style>
+	  body {
+		font-family: Lucida Grande, Lucida Sans, Arial, sans-serif;
+	  }
+      .sos-app-container {
+        width: 100%;
+        position: relative;
+        left: 0px;
+        top: 10px;
+      }
+      .sos-app {
+        width: 81%;
+        height: 600px;
+        padding: 5px;
+        position: absolute;
+        left: 210px;
+        top: 5px;
+      }
+      .sos-menu-controls-container {
+        height: 180px;
+        position: absolute;
+        left: 8px;
+        top: 198px;
+      }
+    </style>
   </head>
   <body onload="init()">
-    <h1 id="title">sos-js demo</h1>
-    <p>Open the console log (Ctrl+Shift+k in Firefox) to see outputs from this test harness</p>
-    <p>This tests the core SOS objects from the SOS.js module, via a number of user-defined callbacks.  It requests the latest data from the <em>ttp___geoviqua.dev.52north.org_procedures_WXT520</em> offering, for all observed properties, and dumps lots of output to the console log.  It is these core SOS objects that underpin the user interface components, such as SOS.Plot etc.</p>
-    <div id="output"></div>
-	
-	<h3 id="about">About</h3>
-	<p>Link to Blogpost</p>
+	<a href="https://github.com/52North/sos-js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
+    <h1 id="title">52°North sos-js demo</h1>
+    <p>A demonstration of the full sos-js application, a Javascript client to display and analyse time series data provided via standardized OGC Sensor Observation Service instances.</p>
+    <p>To learn more about the project go to the project page: <a title="sos-js project page" href="https://github.com/52North/sos-js">https://github.com/52North/sos-js</a></p>
   </body>
 </html>
+
