add missing dependency locally

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <title>sos-js Demo</title>
 
     <link rel="stylesheet" href="dependencies/jquery-ui.min.css" type="text/css"/>
-    <link rel="stylesheet" href="SOS.Styles.css" type="text/css"/>
     <script type="text/javascript" src="dependencies/proj4js-combined.js"></script>
     <script type="text/javascript" src="dependencies/OpenLayers.js"></script>
     <script type="text/javascript" src="dependencies/jquery.min.js"></script>
     <script type="text/javascript" src="dependencies/jquery-ui.min.js"></script>
-    <!--[if lte IE 8]><script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/flot/excanvas.min.js"></script><![endif]-->
+    <!--[if lte IE 8]><script type="text/javascript" src="dependencies/excanvas.min.js"></script><![endif]-->
     <script type="text/javascript" src="dependencies/jquery.flot.min.js"></script>
     <script type="text/javascript" src="dependencies/jquery.flot.selection.min.js"></script>
     <script type="text/javascript" src="dependencies/jquery.flot.axislabels.min.js"></script>
     <script type="text/javascript" src="dependencies/jquery.flot.navigate.min.js"></script>
+	
+    <link rel="stylesheet" href="SOS.Styles.css" type="text/css"/>
     <script type="text/javascript" src="SOS.js"></script>
     <script type="text/javascript" src="SOS.Ui.js"></script>
 	
