simplify css in gh-pages demo

--- a/index.html
+++ b/index.html
@@ -39,26 +39,18 @@
     <style>
 	  body {
 		font-family: Lucida Grande, Lucida Sans, Arial, sans-serif;
+		margin: 3em;
 	  }
       .sos-app-container {
-        width: 100%;
         position: relative;
-        left: 0px;
-        top: 10px;
       }
       .sos-app {
-        width: 81%;
-        height: 600px;
-        padding: 5px;
-        position: absolute;
-        left: 210px;
-        top: 5px;
+        width: 100%;
       }
       .sos-menu-controls-container {
-        height: 180px;
         position: absolute;
-        left: 8px;
-        top: 198px;
+        left: 3em;
+        top: 220px;
       }
     </style>
   </head>
