add 52N favicon to gh-pages demo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>sos-js Demo</title>
 
+	<link href="http://52north.org/templates/52n-2012/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
+	
     <link rel="stylesheet" href="dependencies/jquery-ui.min.css" type="text/css"/>
     <script type="text/javascript" src="dependencies/proj4js-combined.js"></script>
     <script type="text/javascript" src="dependencies/OpenLayers.js"></script>
