Updated the documentation and examples pages, to reflect the latest code mods.
Namely new functions for retrieving offerings: getOfferingByName() and
getOfferingsForProcedureId(), and new function for accessing an
observation record's FOI: getFeatureOfInterestFromObservationRecord().

--- a/web/examples/sos-core-test.html
+++ b/web/examples/sos-core-test.html
@@ -92,7 +92,11 @@
             var ob = this.getFilteredObservationRecord(j, filter);
             if(ob) {
               if(tcaption.length < 1) {
-                tcaption = ob.fois[0].features[0].attributes.name;
+                var foi = this.getFeatureOfInterestFromObservationRecord(ob);
+
+                if(foi) {
+                  tcaption = foi.attributes.name;
+                }
               }
               tbody += '<tr>';
               tbody += '<td>' + ob.observedPropertyTitle + '</td>';
